Gdp use in idiocultural activity - Ch. 6

--- a/_posts/thesis_chapters/2025-3-5-Design.md
+++ b/_posts/thesis_chapters/2025-3-5-Design.md
@@ -505,7 +505,7 @@ While this provides an incomplete picture of the missions and drama process, due
 ## Chapter Discussion
 
 
-CREATE A NEW SUMMARY OF DISCSSION HERE.
+CREATE A NEW SUMMARY OF DISCUSSION HERE.
 
 MOVE TO CONCLUSION?
 This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process. The contradictions explored initially focused on technical and then more social dimensions of the learning design, a process which has surfaced some of the barriers to achieving the varied competencies needed to complete the text coding of a multi-media project.
@@ -529,7 +529,11 @@ While subsequent chapters explore shifts in the overall structure of participant
 
 <!-- DBR and affordances explored as networked affordances align with tools not only as technical or perceptual affordances but also mediation using concepts and more social practices or repertoires in CHAT [@barab_curriculum-based_2006]. -->
 
-#### **Comparing to UMC,  Microworlds & constructionist design principles**
+
+
+
+
+#### Comparing to UMC,  Microworlds & constructionist design principles
 
 
 <!-- MOVED INTEGRATE
@@ -556,7 +560,9 @@ However, the use of an authentic coding language in the form of javascript, and 
 <!-- **tsp**
 Additionally, the concept of task specific programming language within that process is relevant as affordances in my design are chosen not only to impact on the game, but also to build familiarity with code structures. -->
 
-#### **the potentially awesome impact of lifting the lid on authentic technologies**
+#### Authenticity Discussion
+
+**the potentially awesome impact of lifting the lid on authentic technologies**
 
 
 Addressing authenticity in more detail, it is valuable to re-examine the factors driving my choice of JavaScript and Phaser, a professional, open-source game-making framework. Specifically, this choice relates to the potentially empowering impact of exposing participants to authentic technologies and concepts in hands-on, exploratory processes. Ratto [-@ratto_critical_2011] discusses this through critical making, a process that playfully brings forward Latour's [-@weibel_making_2005; -@latour_cautious_2008] ideas of shifting from matters of fact to matters of concern by revealing taken-for-granted artefacts as deliberately designed objects. This was evident in conversations between participants where they expressed a sense of inspiration or engagement with previously unknown technologies. For instance, exchanges demonstrated a growing appreciation for the complexity behind professional games, based on their perception of the effort required for their own simple game projects:  
@@ -565,20 +571,19 @@ Addressing authenticity in more detail, it is valuable to re-examine the factors
     Student Helper 3: Think about how much effort goes into.
     Pearl: You just take things for granted don’t you?
 
+
+
 A possible drawback of using a professional tool for novice learners is the risk of culture shock when participants encounter the unfamiliar and potentially alienating aspects of a professional coding ecosystem. The learning design outlined in this chapter helps address at least the beginning of this process by providing a protective, scaffolded learning environment.  
 
 
 
-
-
 #### The position of GDPs in Activity Systems as the germ cell of this research
-
 <!-- ON THE PROCESS OF THIS Study
 HOW THIS IS A USEFUL PRODUCT -> AS PER dbr
 HOW ALSO AN EMERGENT GERM CELL. An experiment, open ended. -->
 
 
-ARE DIAGRAMS HELPFUL HERE.
+ARE DIAGRAMS HELPFUL HERE. THERE ARE DIAGRAMS IN CH 6?
 
 The position of GDPs in Activity Systems is complex. As framed as the start of the chapter the use of GDPs form is a part of an emerging object of activity. At the narrower level of activity, the implementation of the GDP into the code acts a a prinicple an objective and motivation. In addition, video observations showed GDP concepts being used as mediational strategies in varied ways.
 IS THERE ONE ABOVE?
@@ -618,7 +623,7 @@ REMOVED - ADD BACK IN LATER?
 
   - What contradictions arose in this research’s evolving design process and how were they addressed in the resulting CGD&P pedagogy?
 
-INCLUDE A SUMMARY TABLE OF THE RESpONSES AND THE TENSIONS VIA THE THREE AREAS OF CONTRADICTION. 
+INCLUDE A SUMMARY TABLE OF THE RESpONSES AND THE TENSIONS VIA THE THREE AREAS OF CONTRADICTION.
 
 https://docs.google.com/document/d/10uUm1JiqAg7i4ypdtihmXzteSN7zpKGpv8k9SyG0u2M/edit?tab=t.0
 
