--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -521,6 +521,9 @@ While the context of the participants as families involved in home education mak
 
 Similarly, while Tehillah's activity away from the screen  while non-productive within the scope of technical progress, can be characterised as legitimate peripheral activity of observation of community activity [@lave_situating_1991 ; @rogoff_learning_2014].  Indeed the possibility for children to _not_ engage in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristics in participation based models of learning.
 
+
+
+
 The variety of repertoires of helping practice depends in part on the different funds of knowledge the parent has access to. Toby and Dan's pair process is more guided and focused than many other participants and includes accessing professional documentation and exploration of computational thinking concepts. While the helping pattern of researching and accessing technical documentation is available to all pairs, due to the level of skill and experience involved, other technical processes are developed by most participants and are explored in the next section.
 
 
@@ -722,94 +725,30 @@ They seem to take pleasure from ignoring concepts of what should be done to main
 
 Once concepts like safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, either from documentation, home gaming knowledge or genuine innovation,  it became available for propagation for take up by other participants.
 
-
-
 In Vignette 1B, Toby's work adding 21 levels to his game is noticed by Bertie who then asks Toby, _"Can you show me how you add more levels onto yours?"_ The full exchange shows an example of the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted by Bertie noticing Toby helping Nasrin and Harper add levels to their games. Toby's emerging role as a specialist that the community can draw on for practical help, and similar examples (see also that of Nasrin in Vignette 5), were welcomed by me as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
 
+As explore previously in Ch.5, to prioritise participant engagement, I avoid a principles-first instruction approach (either to the whole group or to individuals). The use of documentation followed just in time principles or was not needed as participants engaged in the kind of peer learning described in this section. This preference for peer learning became a part of the emerging culture of the game making sessions.
 
+#### GDPs as components of emerging repertoires in an evolving idioculture
 
-#### Emergent social and cultural activities in evolving idioculture
+This section uses the term idioculture [@cole_design-based_2016], a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015], to examine the role of GDPs as component parts in the emergence of a community culture.
 
-<!-- NOTE MOVE BACK TO CHAPTER 7 IF NO SPACE? -->
+Aspects of idioculture stemming from GDP use have already been described above, in aspects of peer learning, use of home interests, etc.
 
+**evolving culture of playfulness and social interaction**  
+To creating a relaxed environment I led by warm up games at the start of sessions in P1 regularly and at the start of P2. Regular playtesting which was open in scope allowed for natural play to emerge. For many younger participants, the game making time involved may playful interactions and was an important, perhaps even primary, motivation to attend.
+Playtesting was also used as a social time for adults, conversations about x and y.
 
-This section uses the term idioculture [@cole_design-based_2016], a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015], to examine the emergence of a  community culture. This section contains reflection on some of my own facilitation decisions be they more active decisions to share community behaviour or more passive decisions to step back and let the community evolve in its own way.
-WHY VALID HERE? HOW RELATED TO NEXT CHAPTER?
+<!-- The playful elements of the revised process with greater playtesting time helped remove system tensions and moreover introduced system congruencies. -->
 
-**Responsive not instructive**
-
-As explore previously in Ch.5 (CHECK), I had tried to avoid the use of of a principle first instruction approach either to the whole group or to individuals. The use of documentation followed just in time principles or was not needed as participants engaged in peer learning.
-
-Some individuals really appreciated the detailed documentation.
-
-**Peripheral activities**
-
-This chapter has demonstrated that these behaviours could be undertaken in many ways, including those requiring little commitment.
-
-this form of activity can be seen as legitimate peripheral participation (EXPLAIN?) [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpfuls practice contributing to the emerging ecosystem of the learning community.
-
-Observation on T's part, still legitimate
-
-For example, even if participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting,
-
-
-**evolving culture of playfulness**
-
-Introduced by myself in games at the start. And by encouraging regular playtesting
-
-For many younger participants, playful interactions can be seen a a leading activity, or a primary motivation.
-The process of playtesting often served as a facilitative medium for a shared language and idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design.
-
-The playful elements of the revised process with greater playtesting time helped remove system tensions and moreover introduced system congruencies.
-
-Playtesting explored in more detail in relation to agency development to anwser RQ3 in Chapter 7.
-
-
-**Social behaviour in playtesting**
-
-Non gaming aspects emerged. As per normal, but still significant.
-
-The work of the student helpers is valid here.
-
-M in very social positive comments on how cute characters looked.
-
-Comments on home ed opportunities,
-
-More general talk on the complexity of programming and the and
-
-The culture or hardness merits a separate section.
-
-
-**Fluency and fluidity in practice**
-
-Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
-
-**Moved section on norms**
-
-There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players. The discussion of game challenge, specifically comments about how 'hard' participant games were, was a particularly common interaction during playtesting. Vignette.challenge outlines a key interaction which demonstrates norming behaviour towards Madiha(p) who has concentrated on the graphics of her game to the detriment of the level of challenges. In particular, the controls of the game are frustrating. The vignette shows varied attempts to influence Madiha to change the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Madiha directly to change the game, these comments appear to direct the direction of the design to comply with an emerging community norm of how a player jumps should feel, stemming from the participants' feedback on the feeling of lack of control over the player's character in the game. These behaviours are some of the informal norming behaviours that are less directive, seen in the work of Rogoff and colleagues, as explored in the literature review [@rogoff_cultural_2003].
-
-**The evolution of game play norms**
-
-Community norms began to develop, some of which were influenced by home experience of game playing. Vignette 4 (V4.a) outlines the community norming of Madiha(p)'s game to conform to expected standards of a platform game.
-
-Ed gives a more technical explanation from  involving the naming of the variable _jump speed_.
-
-Other children come and play the game but only for less than a minute before leaving. Towards the end of the playtesting process, as one child leaves, Molly comments "It's so frustrating." This suggests an evolving understanding that her game is frustrating to players rather than pleasantly challenging.
-
-The indirect norming behaviours described in appendix 5.Norm.x mirror observations seen in the work of Rogoff and colleagues [@rogoff_cultural_2003] on learning in  community settings.
-
+**Community norms of gameplay began to develop, **some of which were influenced by home experience of game playing.  The discussion of game challenge, specifically comments about how 'hard' participant games were, was a particularly common interaction during playtesting. Vignette 4 (V4.a) outlines the community norming of Madiha(p)'s game to conform to expected standards of a platform game. The vignette shows varied attempts to influence Madiha to change the game variables to make controlling her player avatar less frustrating. There is an apparent tension in play here between encouraging individual agency of expression within the game and an evolving community tendency to norm peoples games to be more _playable_. The indirect norming behaviours described in Vignette 4 (V4.a) mirror observations seen in the work of Rogoff and colleagues [@rogoff_cultural_2003] on learning in  community settings.
+DEVELOP THIS VIA LINK?
 
 LINK
-These examples are emerging process where cultural concepts are mutually constituted by different actors involved in the game making activity system. While the concepts of hardness and challenge that emerge and not concrete examples of GDPS, they are the results of changed GDPs. The next chapter explores similar data on the use of GDP related concepts by participants and the resultant potential impact on participant agency.
+This section is short as this aspect is explored in more depth in Chapter 7.
+These examples are emerging process where cultural concepts are mutually constituted by different actors involved in the game making activity system. While the concepts of hardness and challenge that emerge and not concrete examples of GDPs used as mediation, rather an examples of blending of users FoK about gaming norms meeting feedback processes. The next chapter explores similar concepts of blending of practices to create new aspects of the emerging idioculture.
 
-
-**A tension in use of norming practices and participant choice?**
-
-KEEP , DEVELOP OR MOVE
-There is an apparent tension in play here between encouraging individual agency of expression within the game and an evolving community tendency to norm peoples games to be more _playable_, specifically that player movement should conforming to wider expectations.
-
-However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective according to Rogoff, as a productive nudge to get real.
- IS THIS EXPLORED IN THE NEXT CHAPTER?
+<!-- they are the results of changed GDPs. The next chapter explores similar data on the use of GDP related concepts by participants and the resultant potential impact on participant agency. -->
 
 
 ## Discussion
@@ -818,31 +757,13 @@ This discussion section discusses the complexity of the exanded object of activi
 
 
 
-### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation and expanded objects of activity
 
-
-This section begins an interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts, with this analysis continuing in the following chapter.
-
-The uses of the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a more straightforward, triangular form of subject, tool, and object mediation (see Chapter 4 diagram). This chapter, along with the evolution of the learning design, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed. Elements of the innovation in the toolset of learning design, based on the emerging needs of the participants explored in this and the previous chapter, exemplify the development of new mediational strategies and tools, a discussion of which forms a significant part of the following chapter.
-
-
-The following diagram shows complexity of activity
-The games can be seen as boundary objects for complex, and expanded objects of activity.
-This incorporates diverse motivations, examples of which are above including but not limited to incorporting home intersts, supporting children, increasing coding skills, playful interaction,
-
-GDPs are used in diverse ways as mediational tools to support those aims.
-The examples in this chapter show the importance of GDPs as a lingua franca, as a mediational strategy to facilitate these kinds of flexible, responsive collaboration.
-
-SOMEHOW REFERENCE TABLE ABOVE IN RELATION TO THE DIVERSE MOTIVATIONS / MEDIATION STRATEGIES IN ILLUSTRATION BELOW.
-
-![Illustration 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_1.png){width=95%}
-
-Illustration 6.x - Diverse mediational strategies and complex object of activity
 
 
 ### Expanded object in terms of motivation - fluency towards agency
 
 <!-- NOTE To restructure. -->
+
 
 Given the complexity of the object being worked on in this research, and the disparate  sometimes chaotic nature of the emerging activity, [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic],  it is of value to return to existing research on CGD&Pn terms of goal formation and motivation in a way which invites discussion on how best to conceptualise the diversity of motivational aspects and resulting impact on diverse goal formation ( & flexible design practices) present in the findings of this chapter.
 
@@ -852,10 +773,7 @@ Flow theory in my guiding motivations in terms of participant experience [@pertt
 Chapter 2 also  explored concepts of fluency in varied forms within constructionist research, technological, digital and computation.
 By way of contrast, the guiding principle being self expression and identity formation. However, given the limitations of constructionism as a theoretical framework, this research also reflects these limits.
 
-
-
 As a step towards this development we can identify the characteristics of fluency in the mediational uses of GDPs outlined in this chapter, identifying techniques used to design for those characteristics, and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.  
-
 
 - via instrumental coding competency needed to make changes effectively with or without supporting documentation
 - from a as a read / write perspective, learners should be able to write as well as read programs as a form of empowerment [@resnick2002rethinking]
@@ -863,11 +781,15 @@ As a step towards this development we can identify the characteristics of fluenc
 
 What can be observed about the interaction of participants use of GDPs and the experience of participant fluency.
 
+**Fluency and fluidity in practice**
+
+Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
+
 
 
 <!-- The data of this chapter develops the scope of this line of research with more specific using framed using socio-cultural analysis and concepts. -->
 
-### Link section
+### Link section - MERGE THIS WITH THE ABOVE.
 
 Returning to the gaps in research outline in Chapter 2...
 
@@ -878,6 +800,9 @@ Returning to the gaps in research outline in Chapter 2...
 **limitation of fluency as a concepts**
 
 MOVE REFLECTIONS HERE.
+MOVE / COMPRESS - NOT VERY DIRECT YET
+In Chapter 2 the value of a learning design using computational thinking patterns was explore through the concept of proximal flow. A synthesis of flow theory with socio-cultural concerns of learning context. A gap in this research however was more specificity in detail of how patterns could help the process of maintaining flow beyond instrumental, albeit just-in-time instruction.  The lack of user-led process due to the linear nature of the instructions provided to implement also limits the experience of flow in terms of lack of possibilities for social identity expression [@mao_optimal_2016].  
+
 
 **Discussion on gap in designing for (either) fluency or agency**
 
@@ -889,8 +814,7 @@ MOVE / COMPRESS - TO LR? MAKE LINK THERE? POTENTIAL OF GDP MENU? THIS EMERGED TH
 
 The work of the constructionist school is rich in a legacy of designing for fluency, notably including: software microworlds, affordance rich tools sets facilitating open-ended experimentations, accessible multi-media authoring software and community of Scratch. One idea which while present in part in online community of Scratch is that of constructopedia, an evolving resource of inspirational design elements, and accompanying instructions.
 
-MOVE / COMPRESS - NOT VERY DIRECT YET
-In Chapter 2 the value of a learning design using computational thinking patterns was explore through the concept of proximal flow. A synthesis of flow theory with socio-cultural concerns of learning context. A gap in this research however was more specificity in detail of how patterns could help the process of maintaining flow beyond instrumental, albeit just-in-time instruction.  The lack of user-led process due to the linear nature of the instructions provided to implement also limits the experience of flow in terms of lack of possibilities for social identity expression [@mao_optimal_2016].  
+
 
 Fluency as a component characteristic of agency via use of diverse mediational strategies is explored in Chapter 7.
 
@@ -910,6 +834,35 @@ Fluency as a component characteristic of agency via use of diverse mediational s
 To extend the concepts of designing for fluidity, it is of value to explore the characteristics of the emerging design practices and potential strategies to support them. These include: a flexible approach to design stages, varied forms of incorporation of external repertoires, and a tension between choice of participant pathway and creative restrictions in the learning design. -->
 
 
+
+### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation and expanded objects of activity - I THINK THIS IS PROBABLY BEST SKIPPED OR VERY BRIEF HERE.
+
+
+This section begins an interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts, with this analysis continuing in the following chapter.
+
+The uses of the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a more straightforward, triangular form of subject, tool, and object mediation (see Chapter 4 diagram).
+
+This chapter, along with the evolution of the learning design, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed.
+
+Elements of the innovation in the toolset of learning design, based on the emerging needs of the participants explored in this and the previous chapter, exemplify the development of new mediational strategies and tools.
+
+
+At the larger scale, (see Fig.3.x) the games code and c can be seen as boundary objects for complex, and expanded interacting systems of activity.
+
+In this research this exapanded object becomes increasingly complex.
+This incorporates diverse motivations, examples of which are above including but not limited to incorporting home intersts, supporting children, increasing coding skills, playful interaction,
+
+Given the complexity of the expanded object and it would be unwieldy to try to represent in a 3GAT diagram form. As Engestrom noted in discussing challenges of representing new generations of AT, you can't keep adding triangles.
+
+NOW MAKE A LINK TO THE PROCESS OF THE NEXT CHAPTER.
+
+
+GDPs are used in diverse ways as mediational tools to support those aims.
+The examples in this chapter show the importance of GDPs as a lingua franca, as a mediational strategy to facilitate these kinds of flexible, responsive collaboration.
+
+SOMEHOW REFERENCE TABLE ABOVE IN RELATION TO THE DIVERSE MOTIVATIONS / MEDIATION STRATEGIES IN ILLUSTRATION BELOW.
+
+<!-- ![Illustration 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_1.png){width=95%} -->
 
 
 
